# zch_e2ee

./: .gitignore  COMO_PUBLICAR.md  LICENSE  README.md  README_EN.md  chat_simulador.py  main.py  prueba.py  prueba_ec_completa.py  prueba_ecdh.py  pyproject.toml
src/zch_e2ee/: __init__.py  __main__.py  importer.py  zch_e2ee.py
