[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zch-e2ee"
version = "1.1.5"
authors = [
  { name="Zoe CH", email="zoech@example.com" },
]
description = "Modulo de encriptacion extremo a extremo (E2EE) usando RSA y AES-GCM."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=40.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
